# thinksy

./: .env.example  .gitignore  README.md  get_youtube_token.py  pyproject.toml  requirements.txt
Thinksy/: opencollection.yml
bruno/: bruno.json
bruno/Anthropic/: Test Messages API.bru
bruno/HeyGen/: Get Avatars.bru  List Voices.bru
bruno/Instagram/: Get Recent Media.bru  Get User Profile.bru
bruno/YouTube/: List My Channels.bru  Refresh Access Token.bru
context/: README.md  auto-sync.sh  memory.db
context/strategies/: test-sync.md
pipeline/: cli.py  config.py  db.py  export.py  models.py
pipeline/content_strategist/: agent.py  prompts.py
pipeline/frontend/: agent.py  seo.py
pipeline/instagram/: agent.py  engagement.py  hashtags.py
pipeline/memory/: models.py  store.py
pipeline/orchestrator/: agent.py  approval.py
pipeline/shared/: llm.py  retry.py  storage.py
pipeline/video_producer/: agent.py  heygen_client.py  runway_client.py
pipeline/youtube/: agent.py  seo.py
shards/: game.txt
shards/docs/: cards.csv  game_design_v2.md
shards/docs/design/: card-system.md  collection-economy.md  core-concept.md  harnesses.md  ships.md  starter-decks.md
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/[geo]/: page.tsx
web/src/app/admin/: page.tsx
web/src/components/: VideoCard.tsx  VideoGrid.tsx
web/src/data/: videos.json
web/src/lib/: db.ts  types.ts
web/src/lib/server/: adminDb.ts  jobStore.ts  loadRootEnv.ts  runJob.ts
(+30 files in other folders)
